--- a/package.json
+++ b/package.json
@@ -16,9 +16,7 @@
     "dependencies": {
         "@wordpress/scripts": "*",
         "normalize.css": "*",
-        "axios": "^0.21.1",
-        "bootstrap": "^5.3.3",
-        "font-awesome": "^4.7.0"
+        "axios": "^0.21.1"
 
     }
 }
